--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+
 body{
   font-family: 'Open Sans Condensed';
-  padding: 20px 80px;
+  padding: 20px 60px;
+  
 }
 a{
   text-decoration: none;
   color: black;
+}
+
+@media screen and (max-width: 600px){
+  body{
+  padding: 5px 20px;
+  }
 }
