--- a/src/Components/collection-preview/collection-preview.styles.scss
+++ b/src/Components/collection-preview/collection-preview.styles.scss
@@ -1,8 +1,9 @@
+$break-small: 800px;
+$break-large: 1200px;
 .collection-preview {
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
-  
     .title {
       font-size: 28px;
       margin-bottom: 25px;
@@ -11,5 +12,9 @@
     .preview {
       display: flex;
       justify-content: space-between;
+      @media screen and (max-width: $break-small) {
+        flex-direction: column;
+      }
+     
     }
   }
