--- a/src/Components/menu-item/menu-item.styles.scss
+++ b/src/Components/menu-item/menu-item.styles.scss
@@ -1,3 +1,5 @@
+$break-small: 800px;
+$break-large: 1200px;
 .menu-item {
     min-width: 30%;
     height: 240px;
@@ -8,6 +10,9 @@
     border: 1px solid black;
     margin: 0 7.5px 15px;
     overflow: hidden;
+    @media screen and (max-width: $break-small) {
+      width: 90%;
+    }
     
     &:hover{
         cursor: pointer;
@@ -40,7 +45,7 @@
   
     .content {
       height: 90px;
-      padding: 0 25px;
+      padding: 0 10px;
       display: flex;
       flex-direction: column;
       align-items: center;
