added a little stylesheet

--- a/src/Components/menu-item/menu-item.styles.scss
+++ b/src/Components/menu-item/menu-item.styles.scss
@@ -11,7 +11,8 @@ $break-large: 1200px;
     margin: 0 7.5px 15px;
     overflow: hidden;
     @media screen and (max-width: $break-small) {
-      width: 90%;
+      width: 95%;
+      margin: 10px auto;
     }
     
     &:hover{
