--- a/src/Components/sing-in/sign-in.styles.scss
+++ b/src/Components/sing-in/sign-in.styles.scss
@@ -8,7 +8,13 @@ $break-large: 1200px;
     .title{
         margin: 10px;
     }
+
+    .button{
+        display: flex;
+        justify-content: space-between;
+    }
     @media screen and (max-width: $break-small) {
-        width: auto;
-      }
+          width: auto;
+    }
+    
 }
